Bug 322719 - Krita start mode do not permit to open documents via the drag-and-drop feature.
Summary: Krita start mode do not permit to open documents via the drag-and-drop feature.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.6.3
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-23 06:57 UTC by yustas
Modified: 2013-09-30 01:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description yustas 2013-07-23 06:57:34 UTC
I think it is a serious disadvantage. I like to open documents in the file manager via drag-and-drop them to any packages without any previously opened docements.
Comment 1 Halla Rempt 2013-08-27 19:07:11 UTC
Thanks -- yes, this would be a good thing to have.
Comment 2 Halla Rempt 2013-09-29 13:07:06 UTC
Git commit 7259e21b69c5e5c1e5fbfc2a461e6634d2eb5bdf by Boudewijn Rempt.
Committed on 29/09/2013 at 13:06.
Pushed by rempt into branch 'master'.

Make the openpane a drop target

For now, you can only drop one (1) file, not multiple, because of the
kpart/kdocument braindeadness...

M  +22   -0    libs/main/KoOpenPane.cpp
M  +5    -0    libs/main/KoOpenPane.h

http://commits.kde.org/calligra/7259e21b69c5e5c1e5fbfc2a461e6634d2eb5bdf
Comment 3 yustas 2013-09-30 01:30:05 UTC
I like it. Thanks!