Make the openpane a drop target

For now, you can only drop one (1) file, not multiple, because of the
kpart/kdocument braindeadness...

BUG:322719